# diff-flow

./: .gitignore  LICENSE  diff-flow.cabal
.github/workflows/: haskell-ci.yml
example/: Distinct.hs  Loop.hs  Main.hs  Reduce.hs
src/: Graph.hs  MyLib.hs  Shard.hs  Types.hs  Weird.hs
src/DiffFlow/: Graph.hs  Shard.hs  Types.hs
test/DiffFlow/: LoopSpec.hs  TypesSpec.hs
