cabal-version:      2.4
name:               diff-flow
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Commelina
maintainer:         maosics@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Graph
    Types
    Shard

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , base                  ^>=4.14.3.0
    , containers
    , hashable
    , multiset
    , text
    , time
    , unordered-containers
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite lib-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      DiffFlow.TypesSpec
  hs-source-dirs:     test
  build-depends:
    , aeson
    , base                  ^>=4.14.3.0
    , containers
    , diff-flow
    , hashable
    , hspec
    , multiset
    , text
    , time
    , unordered-containers
    , vector

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

executable example
  main-is:          example/Main.hs
  build-depends:
    , aeson
    , base                  ^>=4.14.3.0
    , containers
    , diff-flow
    , hashable
    , hspec
    , multiset
    , text
    , time
    , unordered-containers
    , vector

  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N