cabal-version:      2.4
name:               diff-flow
version:            0.1.0.0
synopsis:           Differential stream processing library.
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) 2022 Commelina
author:             Commelina <maosics@gmail.com>
maintainer:         Commelina <maosics@gmail.com>
tested-with:        GHC ==8.10.7
category:           Streaming
homepage:           https://github.com/hstreamdb/diff-flow
bug-reports:        https://github.com/hstreamdb/diff-flow/issues
build-type:         Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    Graph
    Shard
    Types
    Weird

  build-depends:
    , aeson                 <2
    , base                  >=4.11 && <5
    , containers
    , extra
    , hashable
    , multiset
    , stm
    , text
    , unordered-containers
    , vector

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite lib-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:      DiffFlow.TypesSpec
  hs-source-dirs:     test
  build-depends:
    , aeson                 <2
    , base                  >=4.11 && <5
    , containers
    , diff-flow
    , hashable
    , hspec
    , multiset
    , text
    , unordered-containers
    , vector

  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

executable example
  main-is:          example/Main.hs
  build-depends:
    , aeson                 <2
    , base                  >=4.11 && <5
    , containers
    , diff-flow
    , hashable
    , hspec
    , multiset
    , text
    , unordered-containers
    , vector

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable example-2
  main-is:          example/Reduce.hs
  build-depends:
    , aeson                 <2
    , base                  >=4.11 && <5
    , containers
    , diff-flow
    , hashable
    , hspec
    , multiset
    , text
    , unordered-containers
    , vector

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable example-3
  main-is:          example/Distinct.hs
  build-depends:
    , aeson                 <2
    , base                  >=4.11 && <5
    , containers
    , diff-flow
    , hashable
    , hspec
    , multiset
    , text
    , unordered-containers
    , vector

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

executable example-4
  main-is:          example/Loop.hs
  build-depends:
    , aeson                 <2
    , base                  >=4.11 && <5
    , containers
    , diff-flow
    , hashable
    , hspec
    , multiset
    , text
    , unordered-containers
    , vector

  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
